--- a/theater.html
+++ b/theater.html
@@ -4,40 +4,45 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Assignment 4 - HTML and CSS</title>
+    <link rel="stylesheet" href="chekov.css" />
   </head>
   <body>
     <h1>Sem does Chekov tonight</h1>
     <h2>On the high road - Anton Chekov</h2>
     <div>
-      <h4>FEDYA.</h4>
-      <p>Well, well, well.... You have come a long way, old man! On foot?</p>
-      <h4>SAVVA.</h4>
-      <p>
+      <h4 class="fedya">FEDYA.</h4>
+      <p class="speech fedya">
+        Well, well, well.... You have come a long way, old man! On foot?
+      </p>
+      <h4 class="savva">SAVVA.</h4>
+      <p class="speech savva">
         On foot, young man. I've been to Tihon of the Don, and I'm going to the
         Holy Hills.
       </p>
-      <p>
+      <p class="direction">
         [Note: On the Donetz, south-east of Kharkov; a monastery containing a
         miraculous ikon.]...
       </p>
-      <p>
+      <p class="speech savva">
         From there, if God wills it, to Odessa.... They say you can get to
         Jerusalem cheap from there, for twenty-ones roubles, they say....
       </p>
-      <h4>FEDYA.</h4>
-      <p>And have you been to Moscow?</p>
-      <h4>SAVVA.</h4>
-      <p>Rather! Five times....</p>
-      <h4>FEDYA.</h4>
-      <p>Is it a good town?</p>
-      <p>[Smokes]</p>
-      <p>
+      <h4 class="fedya">FEDYA.</h4>
+      <p class="speech fedya">And have you been to Moscow?</p>
+      <h4 class="savva">SAVVA.</h4>
+      <p class="speech savva">Rather! Five times....</p>
+      <h4 class="fedya">FEDYA.</h4>
+      <p class="speech fedya">Is it a good town?</p>
+      <p class="direction">[Smokes]</p>
+      <p class="speech fedya">
         Well-standing? Sews. There are many holy places there, young man....
         Where there are many holy places it's always a good town....
       </p>
-      <h4>BORTSOV.</h4>
-      <p>[Goes up to the counter, to TIHON]</p>
-      <p>Once more, please! For the sake of Christ, give it to me!</p>
+      <h4 class="bortsov">BORTSOV.</h4>
+      <p class="direction">[Goes up to the counter, to TIHON]</p>
+      <p class="speech bortsov">
+        Once more, please! For the sake of Christ, give it to me!
+      </p>
     </div>
   </body>
 </html>
