Add actor table and styles

--- a/theater.html
+++ b/theater.html
@@ -44,5 +44,27 @@
         Once more, please! For the sake of Christ, give it to me!
       </p>
     </div>
+    <table>
+      <tr>
+        <th>Character</th>
+        <th>Actor</th>
+        <th>Understudy</th>
+      </tr>
+      <tr>
+        <td>Fedya</td>
+        <td>Margot Robbie</td>
+        <td>Scarlett Johansson</td>
+      </tr>
+      <tr>
+        <td>Savva</td>
+        <td>Lisa Vicari</td>
+        <td>Sandra Bullock</td>
+      </tr>
+      <tr>
+        <td>Bortsov</td>
+        <td>Leonardo Dicaprio</td>
+        <td>Adam Driver</td>
+      </tr>
+    </table>
   </body>
 </html>
