Add hovers to winter.html

--- a/winter.html
+++ b/winter.html
@@ -7,19 +7,19 @@
     <link rel="stylesheet" href="chekov.css" />
   </head>
   <body>
-    <h1>Sem does Chekov tonight</h1>
+    <h1>Sem does Chekov tonight - Winter</h1>
     <h2>On the high road - Anton Chekov</h2>
     <div>
-      <h4 class="savva">SAVVA.</h4>
+      <h4 class="name savva">SAVVA.</h4>
       <p class="speech savva">Rather! Five times....</p>
-      <h4 class="fedya">FEDYA.</h4>
+      <h4 class="name fedya">FEDYA.</h4>
       <p class="speech fedya">Is it a good town?</p>
       <p class="direction">[Smokes]</p>
       <p class="speech fedya">
         Well-standing? Sews. There are many holy places there, young man....
         Where there are many holy places it's always a good town....
       </p>
-      <h4 class="bortsov">BORTSOV.</h4>
+      <h4 class="name bortsov">BORTSOV.</h4>
       <p class="direction">[Goes up to the counter, to TIHON]</p>
       <p class="speech bortsov">
         Once more, please! For the sake of Christ, give it to me!
